@startuml ClassDiagram_Managers
skinparam defaultFontName Monospaced
skinparam shadowing false
skinparam linetype ortho
skinparam packageBackgroundColor #f9f9f9
skinparam packageBorderColor #aaaaaa
skinparam packageFontColor #666666
skinparam packageFontStyle bold
skinparam class {
  BackgroundColor<<interface>> #dae8fc
  BorderColor<<interface>>     #6c8ebf
  FontStyle<<interface>>       italic
  BackgroundColor<<abstract>>  #e1d5e7
  BorderColor<<abstract>>      #9673a6
  FontStyle<<abstract>>        italic
  BackgroundColor<<concrete>>  #fff2cc
  BorderColor<<concrete>>      #d6b656
  BackgroundColor<<manager>>   #d5e8d4
  BorderColor<<manager>>       #82b366
  BackgroundColor<<utility>>   #f5f5f5
  BorderColor<<utility>>       #666666
  FontColor<<utility>>         #333333
}

package "Managers" {
  class ShaderManager <<manager>> {
    - m_programs : map<string, GLuint>
    --
    + Load(in name : string, in stages : vector<ShaderStage>) : GLuint
    + Get(in name : string) : GLuint
    + ReloadAll() : void
    + DeleteAll() : void
  }
  class SceneManager <<manager>> {
    - m_drawables : vector<shared_ptr<IDrawable>>
    --
    + Add(in d : shared_ptr<IDrawable>) : void
    + Remove(in d : shared_ptr<IDrawable>) : void
    + Update(in info : SUpdateInfo) : void
    + Render(in v : IModelRendererVisitor&) : void
    + RenderGUI(in v : IGUIVisitor&) : void
    + Clear() : void
  }
  class MaterialManager <<manager>> {
    - m_materials : unordered_map<size_t, weak_ptr<Material>>
    --
    + GetOrCreate(in mat : Material) : shared_ptr<Material>
    + CollectGarbage() : void
  }
  class TextureManager <<manager>> {
    - m_cache : unordered_map<string, weak_ptr<Texture>>
    --
    + GetOrLoad(in path : path, in flip : bool) : shared_ptr<Texture>
    + CollectGarbage() : void
    + GetCachedCount() : size_t
  }
  class SkyboxRenderer <<manager>> {
    - m_programID : GLuint
    - m_textureID : GLuint
    - m_gpuObject : OGLObject
    --
    + SkyboxRenderer(in sm : ShaderManager&)
    + ~SkyboxRenderer()
    + Render(in cam : ICamera&) : void
  }
  class AxesRenderer <<manager>> {
    - m_programID : GLuint
    --
    + AxesRenderer(in sm : ShaderManager&)
    + ~AxesRenderer()
    + Render(in cam : ICamera&) : void
  }
}

class MyApp <<concrete>> {
}
interface IDrawable <<interface>> {
}
class Material <<utility>> {
}
class Texture <<utility>> {
}
interface ICamera <<interface>> {
}

MyApp *-- ShaderManager
MyApp *-- SceneManager
MyApp *-- MaterialManager
MyApp *-- TextureManager
MyApp *-- SkyboxRenderer
MyApp *-- AxesRenderer
SceneManager o-- "0..*" IDrawable
MaterialManager ..> Material
TextureManager ..> Texture
SkyboxRenderer ..> ShaderManager
AxesRenderer ..> ShaderManager
SkyboxRenderer ..> ICamera
AxesRenderer ..> ICamera
@enduml
